# doordrill

./: ADAPTIVE_TRAINING_ENGINE.md  API Implementation.docx  ARCHITECTURE_CONFORMANCE.md  CLAUDE.md  CLAUDE_TODO.md  CODEX_HANDOFF_STT_LATENCY.md  CODEX_PROMPT_RAG.md  CODEX_PROMPT_STT.md  CODEX_PROMPT_STT_FLOW.md  CONTRIBUTING.md  CONVERSATIONAL_MICRO_BEHAVIORS_ENGINE.md  DoorDrill_Phase1_PRD.docx  EMOTION_SIMULATION_ENGINE.md  IMPLEMENTATION_SPEC.md  MANAGEMENT_GAP_EXECUTION_PLAN.md  MERGE_TODO.md  PHASE_GAP_ANALYSIS_20260306.md  PRD_Drill_Realism_v2.md  PRD_Drill_Realism_v3.md  PRD_Engine_Hardening_v1.md  PRD_Grading_v1.md  PRD_Latency_v1.md  PRD_STT_Homeowner_Smoothness_v1.md  PRD_Universal_RAG_v1.md  PRODUCTION_CHECKLIST.md  PRODUCTION_CODEX_PROMPTS.md  README.md  SECURITY.md  SYSTEM_ARCHITECTURE_ANALYSIS.md  fly.toml  pest_control_d2d_universal_knowledge.md  tmp_verify_adaptive_outcome.sqlite  tmp_verify_audit.sqlite  tmp_verify_endpoint.sqlite  tmp_verify_grading_context.sqlite  tmp_verify_replay.sqlite  tmp_verify_ws_pipeline.sqlite
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  debug_deepgram_session.py  phone_test.sqlite  pyproject.toml  stress_test.py  test_providers.py  tmp_org_prompt_config_test.sqlite  tmp_tasks_2_6_prompt.sqlite  tmp_tasks_2_6_retrieval.sqlite  tmp_tasks_2_6_ws.sqlite  tmp_tasks_2_6_ws_regression.sqlite  tmp_tasks_2_6_ws_v2.sqlite
backend/alembic/: env.py
backend/app/: main.py
backend/scripts/: README.md  create_test_user.py  e2e_smoke_test.py  load_test_management_analytics.py  load_test_ws.py  seed_assignment.py  seed_load_data.py  show_transcript.py
backend/tests/: conftest.py  test_adaptive_outcome_written_after_session.py  test_adaptive_training.py  test_admin_training_loop_audit.py  (+96 more)
(+332 files in other folders)
