[project]
name = "doordrill-backend"
version = "0.1.0"
description = "DoorDrill v1 backend with realtime voice ledger and manager workflows"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "slowapi>=0.1.9",
  "sentry-sdk[fastapi]>=2.0.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "redis>=5.2.0",
  "httpx>=0.28.0",
  "websockets>=13.0",
  "PyJWT>=2.10.1",
  "argon2-cffi>=23.1.0",
  "numpy>=2.2.0",
  "scipy>=1.15.0",
  "python-multipart>=0.0.12",
  "celery>=5.4.0",
  "pgvector>=0.3.6",
  "pypdf>=5.3.0",
  "python-docx>=1.1.2",
  "jinja2>=3.1.0",
  "cachetools>=5.5.2",
  "tiktoken>=0.9.0",
  "jinja2>=3.1.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "anyio>=4.6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
